--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
           <div class="button-container">
             <a href="./paper.pdf" target="_blank" class="button" style="background-color: #f2f2f2;border: transparent;"><i class="fa-light fa-file"></i>&emsp14;PDF</a>
-            <!-- <a href="https://demo-generation.github.io" target="_blank" class="button" style="background-color: #f2f2f2;border: transparent;"><i class="ai ai-arxiv"></i>&emsp14;arXiv</a> -->
+            <a href="https://arxiv.org/abs/2502.16932" target="_blank" class="button" style="background-color: #f2f2f2;border: transparent;"><i class="ai ai-arxiv"></i>&emsp14;arXiv</a>
             <a href="https://youtu.be/rNhptjL-um8" target="_blank" class="button"><i class="fa-light fa-film"></i>&emsp14;Video</a>
             <!-- <a href="https://x.com/wenlong_huang/status/1829135436717142319" target="_blank" class="button"><i class="fa-brands fa-x-twitter"></i>&emsp14;tl;dr</a> -->
             <a href="https://github.com/TEA-Lab/DemoGen" target="_blank" class="button" style="background-color: #f2f2f2;border: transparent;"><i class="fa-light fa-code"></i>&emsp14;Code</a>
