--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description"
     content="DemoGen: Synthetic Demonstration Generation for Data-Efficient Visuomotor Policy Learning">
-  <meta name="keywords" content="Data Generation, Imitation Learning, Visuomotor Policy, Robotic Manipulation">
+  <meta name="keywords" content="Data Generation, Imitation Learning, Visuomotor Policy, Robotic Manipulation, DemoGen, demogen">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>
     DemoGen | Synthetic Demonstration Generation for Data-Efficient Visuomotor Policy Learning
