--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <a target="_blank" href="https://openreview.net/profile?id=~Shuying_Deng1">Shuying Deng</a><sup>1*</sup>,
             </span>
             <span class="author-block">
-              <a target="_blank" href="https://chenzheny.github.io/">Zhengyang Chen</a><sup>2</sup>,
+              <a target="_blank" href="https://chenzheny.github.io/">Zhenyang Chen</a><sup>2</sup>,
             </span>
             <span class="author-block">
               <a target="_blank" href="https://openreview.net/profile?id=~Yixuan_Wang19">Yixuan Wang</a><sup>1</sup>,
