--- a/index.html
+++ b/index.html
@@ -389,14 +389,15 @@
     <h2 id="cost" class="title is-4" style="margin-top: 1.8em; margin-bottom: 0.8em; color:#6510ad">Time Cost for Generating Real-World Demonstrations</h2>
     <div class="columns">
       <div class="columns is-vcentered  is-centered">
-        <img style="width: 80%;" src="media/images/cost.png" class="method-image" />
+        <img style="width: 80%; margin-top: 15px;" src="media/images/cost.png" class="method-image" />
       </div>
   
       <div class="columns is-vcentered  is-centered">
         <p class="content" style="text-align: left">
-          <a href="https://mimicgen.github.io/">MimicGen</a> generates demonstrations via expensive on-robot rollouts. In comparison, 
           <i>DemoGen</i> adopts a cost-effective fully synthetic manner. It takes <i>DemoGen</i> only 22 seconds to generate 2214
           demonstration trajectories, that is, ~147k observation-action pairs.
+          In contrast, <a href="https://mimicgen.github.io/">MimicGen</a> generates demonstrations via expensive on-robot rollouts,
+          hindering its deployment in real-world scenarios.
         </p>
       </div>
     </div>
