--- a/index.html
+++ b/index.html
@@ -630,18 +630,18 @@
 Tsinghua University Dushi Program supports this project.
 </p>
 
+
 <br>
-<br>
-<!-- <br>
+<hr style="margin-top: 1em;">
 <h2 class="title is-3 is-centered has-text-centered" style="color:#6510ad;">BibTeX</h2>
 <p class="bibtex">
-  @article{lin2024data, <br>
-  &nbsp;&nbsp;title={Data scaling laws in imitation learning for robotic manipulation}, <br>
-  &nbsp;&nbsp;author={Lin, Fanqi and Hu, Yingdong and Sheng, Pingyue and Wen, Chuan and You, Jiacheng and Gao, Yang}, <br>
-  &nbsp;&nbsp;journal={arXiv preprint arXiv:2410.18647}, <br>
-  &nbsp;&nbsp;year={2024} <br>
+  @article{xue2025demogen, <br>
+  &nbsp;&nbsp;title={DemoGen: Synthetic Demonstration Generation for Data-Efficient Visuomotor Policy Learning}, <br>
+  &nbsp;&nbsp;author={Xue, Zhengrong and Deng, Shuying and Chen, Zhenyang and Wang, Yixuan and Yuan, Zhecheng and Xu, Huazhe}, <br>
+  &nbsp;&nbsp;journal={arXiv preprint arXiv:2502.16932}, <br>
+  &nbsp;&nbsp;year={2025} <br>
   }
-</p> -->
+</p>
 
 </section>
 </div>
