--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 <br>
 <hr style="margin-top: 1em;">
 <h2 class="title is-3 is-centered has-text-centered" style="color:#6510ad;">Acknowledgments</h2>
-<p>
+<p style="text-align: left">
   We would like to give special thanks to Galaxea Inc. for providing the R1 robot and
    Jianning Cui, Ke Dong, Haoyin Fan, and Yixiu Li for their technical support. 
    We also thank Gu Zhang, Han Zhang, and Songbo Hu for hardware setup and data collection, 
@@ -634,7 +634,7 @@ Tsinghua University Dushi Program supports this project.
 <br>
 <hr style="margin-top: 1em;">
 <h2 class="title is-3 is-centered has-text-centered" style="color:#6510ad;">BibTeX</h2>
-<p class="bibtex">
+<p class="bibtex" style="text-align: left">
   @article{xue2025demogen, <br>
   &nbsp;&nbsp;title={DemoGen: Synthetic Demonstration Generation for Data-Efficient Visuomotor Policy Learning}, <br>
   &nbsp;&nbsp;author={Xue, Zhengrong and Deng, Shuying and Chen, Zhenyang and Wang, Yixuan and Yuan, Zhecheng and Xu, Huazhe}, <br>
