--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="hero-body">
       <div class="container">
         <div class="columns is-vcentered  is-centered">
-          <video id="teaser" autoplay muted controls height="100%" width="100%">
+          <video id="teaser" controls height="100%" width="100%">
             <source src="media/videos/teaser.mp4"
                     type="video/mp4">
           </video>
