--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
               Synthetic Demonstration Generation <br> for Data-Efficient Visuomotor Policy Learning
             </span>
           </h1>
+          <div class="is-size-4 accepted" style="color:#6510ad">
+            RSS 2025
+          </div>
+          <div class="is-size-5 award" style="color:#6510ad">
+            Robot Learning Workshop, ICLR 2025 (Oral)
+          </div>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a target="_blank" href="https://steven-xzr.github.io/">Zhengrong Xue</a><sup>1,2,3*</sup>,
