--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
           <div class="is-size-4 accepted" style="color:#6510ad">
             RSS 2025
           </div>
-          <div class="is-size-5 award" style="color:#6510ad">
+          <!-- <div class="is-size-5 award" style="color:#6510ad">
             Robot Learning Workshop, ICLR 2025 (Oral)
-          </div>
+          </div> -->
+          <br>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a target="_blank" href="https://steven-xzr.github.io/">Zhengrong Xue</a><sup>1,2,3*</sup>,
