--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </span>
           </h1>
           <div class="is-size-4 accepted" style="color:#6510ad">
-            RSS 2025
+            Robotics: Science and Systems (RSS) 2025
           </div>
           <!-- <div class="is-size-5 award" style="color:#6510ad">
             Robot Learning Workshop, ICLR 2025 (Oral)
