--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <a target="_blank" href="https://steven-xzr.github.io/">Zhengrong Xue</a><sup>1,2,3*</sup>,
             </span>
             <span class="author-block">
-              <a target="_blank" href="https://openreview.net/profile?id=~Shuying_Deng1">Shuying Deng</a><sup>1*</sup>,
+              <a target="_blank" href="https://shuyingdeng.github.io/">Shuying Deng</a><sup>1*</sup>,
             </span>
             <span class="author-block">
               <a target="_blank" href="https://chenzheny.github.io/">Zhenyang Chen</a><sup>2</sup>,
