--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <i>DemoGen</i> is simple but it really works! To highlight its efficiency and effectiveness, we livestreamed its full pipeline: (1) collecting one source demo, 
       (2) generating synthetic demos with <i>DemoGen</i>, (3) training Diffusion Policy, and (4) testing the trained policy on the real robot. The pipeline was finished in 
       around <strong>30 minutes</strong>, and the trained policy achieved a <strong>100%</strong> success rate with <strong>O.O.D.</strong> configurations on a challenging Jar-Opening task.
-      The playback is available on <a href="https://b23.tv/6f23B5B" target="_blank">Bilibili</a>.
+      An audience of 2,282 watched the livestream at REDnote (小红书, a Chinese social media platform) on Mar 12, 2025. The playback is available on <a href="https://b23.tv/6f23B5B" target="_blank">Bilibili</a>.
   </div>
   <br>
 
