--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <div class="is-size-4 accepted" style="color:#6510ad">
             Robotics: Science and Systems (RSS) 2025
           </div>
-          <!-- <div class="is-size-5 award" style="color:#6510ad">
-            Robot Learning Workshop, ICLR 2025 (Oral)
-          </div> -->
+          <div class="is-size-5 award" style="color:#6510ad">
+            Best Long Paper Award at SynData4CV Workshop, CVPR 2025
+          </div>
           <br>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
